# simulator

./: .pre-commit-config.yaml  noxfile.py  pyproject.toml
.github/workflows/: ci.yaml
examples/quadcopter_obstacle_avoidance/: Dockerfile  README.md  controller_node.py  plotter_node.py  requirements.txt  simulator_node.py  start.bat  start.sh
examples/quadcopter_obstacle_avoidance/skydio_x2/: x2.xml
simulator/: main.py  objects.py
src/simulator/: controller.py
src/simulator/dynamics/: rne_algorithm.py
tests/: test_simple.py
